--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://sumukh-pinge.github.io/" 
+baseURL: "https://pascalmichaillat.org/" 
 title: Sumukh Pinge
 paginate: 20
 theme: PaperMod
